Bug fixed with img overflow

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -38,6 +38,7 @@ ul, li {
 img {
   object-fit: cover;
   object-position: center;
+  max-width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6,
